--- a/.devrc
+++ b/.devrc
@@ -1,7 +1,14 @@
 function travail-setup {
-    docker build -t workspace-dev-img -f Dockerfile .
+    docker build \
+      --build-arg UID=$(id -u) \
+      --build-arg GID=$(id -g) \
+      --build-arg USERNAME=$(id -F) \
+      -t workspace-dev-img \
+      -f Dockerfile .
 }
 
 function travail-enter {
-    docker run --rm -it -v "${PWD}:/workspace" -w /workspace workspace-dev-img /bin/bash
+    docker run --rm -it -v "${PWD}:/workspace" \
+      -w /workspace workspace-dev-img \
+      /bin/zsh
 }
