feat: switch to autoenv

--- a/.env
+++ b/.env
@@ -8,7 +8,15 @@ function travail-setup {
 }
 
 function travail-enter {
-    docker run --rm -it -v "${PWD}:/workspace" \
+    local mounts="-v ${PWD}:/workspace"
+
+    if [ -f ${HOME}/.gitconfig ]; then
+        mounts="${mounts} -v ${HOME}/.gitconfig:/home/$(id -F)/.gitconfig"
+    fi
+
+    docker run --rm -it \
+      $mounts \
       -w /workspace workspace-dev-img \
+      ${extra_flags} \
       /bin/zsh
 }
