feat: use autoenv and update a bit documentation

--- a/.env
+++ b/.env
@@ -14,9 +14,12 @@ function travail-enter {
         mounts="${mounts} -v ${HOME}/.gitconfig:/home/$(id -F)/.gitconfig"
     fi
 
+    if [ -f ${HOME}/.local/share/opencode/auth.json ]; then
+        mounts="${mounts} -v ${HOME}/.local/share/opencode/auth.json:/home/$(id -F)/.local/share/opencode/auth.json"
+    fi
+
     docker run --rm -it \
-      $mounts \
+      $(echo $mounts) \
       -w /workspace workspace-dev-img \
-      ${extra_flags} \
       /bin/zsh
 }
