feat: add mise install if needed

--- a/.env
+++ b/.env
@@ -8,7 +8,12 @@ function travail-setup {
 }
 
 function travail-enter {
+    local travail_root="${0:a:h}"
+    local cache_dir="${travail_root}/.cache"
     local mounts="-v ${PWD}:/workspace"
+
+    mkdir -p "${cache_dir}/mise"
+    mounts="${mounts} -v ${cache_dir}/mise:/home/$(id -F)/.local/share/mise"
 
     if [ -f ${HOME}/.gitconfig ]; then
         mounts="${mounts} -v ${HOME}/.gitconfig:/home/$(id -F)/.gitconfig"
