feat: mount opencode config

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# Internals.
+
+# Setup travail for the first time.
 function travail-setup {
     docker build \
       --build-arg UID=$(id -u) \
@@ -7,6 +10,7 @@ function travail-setup {
       -f Dockerfile .
 }
 
+# Enter a feature with a devel container.
 function travail-enter {
     local travail_root="${0:a:h}"
     local cache_dir="${travail_root}/.cache"
@@ -15,13 +19,17 @@ function travail-enter {
     mkdir -p "${cache_dir}/mise"
     mounts="${mounts} -v ${cache_dir}/mise:/home/$(id -F)/.local/share/mise"
 
-    if [ -f ${HOME}/.gitconfig ]; then
-        mounts="${mounts} -v ${HOME}/.gitconfig:/home/$(id -F)/.gitconfig"
-    fi
+    function _mount_if_exists {
+        local src="$1"
+        local dest="$2"
+        if [ -f "$src" ]; then
+            echo "-v ${src}:${dest}"
+        fi
+    }
 
-    if [ -f ${HOME}/.local/share/opencode/auth.json ]; then
-        mounts="${mounts} -v ${HOME}/.local/share/opencode/auth.json:/home/$(id -F)/.local/share/opencode/auth.json"
-    fi
+    mounts="${mounts} $(_mount_if_exists ${HOME}/.gitconfig ${user_home}/.gitconfig)"
+    mounts="${mounts} $(_mount_if_exists ${HOME}/.local/share/opencode/auth.json ${user_home}/.local/share/opencode/auth.json)"
+    mounts="${mounts} $(_mount_if_exists ${HOME}/.config/opencode/opencode.json ${user_home}/.config/opencode/opencode.json)"
 
     docker run --rm -it \
       $(echo $mounts) \
