--- a/.env
+++ b/.env
@@ -10,14 +10,16 @@ function travail-setup {
       -f Dockerfile .
 }
 
-# Enter a feature with a devel container.
-function travail-enter {
+# Build the docker command for entering the container.
+function _travail-docker-cmd {
+    local target_dir="$1"
     local travail_root="${0:a:h}"
     local cache_dir="${travail_root}/.cache"
-    local mounts="-v ${PWD}:/workspace"
+    local user_home="/home/$(id -F)"
+    local mounts="-v ${target_dir}:/workspace"
 
     mkdir -p "${cache_dir}/mise"
-    mounts="${mounts} -v ${cache_dir}/mise:/home/$(id -F)/.local/share/mise"
+    mounts="${mounts} -v ${cache_dir}/mise:${user_home}/.local/share/mise"
 
     function _mount_if_exists {
         local src="$1"
@@ -31,8 +33,26 @@ function travail-enter {
     mounts="${mounts} $(_mount_if_exists ${HOME}/.local/share/opencode/auth.json ${user_home}/.local/share/opencode/auth.json)"
     mounts="${mounts} $(_mount_if_exists ${HOME}/.config/opencode/opencode.json ${user_home}/.config/opencode/opencode.json)"
 
-    docker run --rm -it \
-      $(echo $mounts) \
-      -w /workspace workspace-dev-img \
-      /bin/zsh
+    echo "docker run --rm -it $(echo $mounts) -w /workspace workspace-dev-img /bin/zsh"
+}
+
+# Enter a feature with a devel container.
+function travail-enter {
+    local target_dir="${PWD}"
+    local dir_name="${target_dir:t}"
+    local parent_name="${target_dir:h:t}"
+    local window_name="${parent_name}/${dir_name}"
+
+    if [[ -n "$TMUX" ]]; then
+        # Running inside tmux - create new window with split panes
+        # Create new window, cd to target dir in left pane
+        tmux new-window -n "${window_name}" -c "${target_dir}"
+        # Split vertically, right pane runs the container
+        tmux split-window -h -c "${target_dir}" "$(_travail-docker-cmd ${target_dir})"
+        # Focus the left pane
+        tmux select-pane -L
+    else
+        # Not in tmux - run container directly (original behavior)
+        eval "$(_travail-docker-cmd ${target_dir})"
+    fi
 }
